# simple-abtest

./: .gitignore  LICENSE  README-DE.md  README-EN.md  README-ES.md  README-FR.md  README-JA.md  README.md  build.sh  go.mod  go.sum
.github/workflows/: ci.yml  cpp-sdk.yml  java-sdk.yml
admin/: application.go  auth.go  common.go  exp_group.go  exp_layer.go  exp_result.go  exp_result_test.go  exp_segment.go  experiment.go  main.go  rate_limit.go  site.go  user_privilege.go
db/: admin.sql  clean.sql  engine.sql
doc/: admin-api.md  data-model.md  engine-api.md  traffic-model.md  ui-design.md
engine/: main.go
engine/core/: dispatch.go  dispatch_test.go  hash.go  hash_test.go  rule.go  rule_test.go
engine/data/: base.go  mysql.go
engine/db/: mysql.go
engine/sign/: token.go  token_test.go
sdk/: sdk.go
sdk-cpp/: CMakeLists.txt  README-EN.md  README.md
sdk-cpp/include/simple_abtest/: sdk.h
sdk-cpp/proto/: experiment.proto
sdk-cpp/src/: hash.cc  hash.h  model.cc  model.h  rule.cc  rule.h  sdk.cc
sdk-cpp/tests/: core_test.cc
sdk-go/: sdk.go
sdk-java/: README-EN.md  README.md  pom.xml
ui/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.vue  auth.ts  i18n.ts  main.ts  style.css
ui/src/api/: index.ts  request.ts
ui/src/components/: AuthDialog.vue  FilterEditor.vue  FilterNode.vue
ui/src/composables/: useRecentApp.ts
ui/src/router/: index.ts
ui/src/stores/: app.ts
utils/: config.go  generics.go  http.go  log.go  metrics.go  mysql.go  random.go  redis.go  unsafe.go
(+16 files in other folders)
